After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 622890 - Should fail to load if loader cannot import gi
Should fail to load if loader cannot import gi
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: python
git master
Other Linux
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2010-06-27 10:51 UTC by Garrett Regier
Modified: 2010-06-27 13:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Require gi in python loader (1.27 KB, patch)
2010-06-27 10:51 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2010-06-27 10:51:32 UTC
Created attachment 164737 [details] [review]
Require gi in python loader

Right now the loader will init successfully even if importing gi would fail.

As gi is required for py plugins it should be checked like the other deps.
Comment 1 Steve Frécinaux 2010-06-27 13:44:39 UTC
Attachment 164737 [details] pushed as 03d05ae - Require gi in python loader