Require gi in python loader

https://bugzilla.gnome.org/show_bug.cgi?id=622890